# indexed_gzip

./: .coveragerc  .gitignore  .travis.yml  AUTHOR  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  benchmark_indexed_gzip.py  conftest.py  indexed_gzip.c  indexed_gzip.pyx  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_indexed_gzip.py  zran.c  zran.h  zran.pxd  zran_example.c
.ci/: activate_env.sh  build_dev_indexed_gzip.sh  build_sdist.sh  build_test_indexed_gzip.sh  build_test_wheel.sh  build_wheels.sh  build_zlib.sh  create_test_env.sh  download_zlib.sh  install_32bit_dependencies.sh  install_vcpython27.sh  run_32bit_test.sh  run_tests.sh
.conda/: meta.yaml
.github/: dependabot.yml
.github/workflows/: main.yaml  master.yaml  pull_request.yaml  release.yaml  tag.yaml  test.yaml  test_master.yaml  test_pull_request.yaml  test_release.yaml
indexed_gzip/: __init__.py  indexed_gzip.pyx  set_traceback.pxd  zran.c  zran.h  zran.pxd  zran_file_util.c  zran_file_util.h  zran_file_util.pxd
indexed_gzip/tests/: __init__.py  __main__.py  benchmark.py  benchmark_bandwidth.py  conftest.py  ctest_indexed_gzip.pyx  ctest_zran.pyx  test_indexed_gzip.py  test_indexed_gzip_threading.py  test_nibabel_integration.py  test_safe_indexed_gzip.py  test_zran.py
tests/: __init__.py  conftest.py  ctest_indexed_gzip.pyx  ctest_zran.c  ctest_zran.pyx  test_indexed_gzip.py  test_safe_indexed_gzip.py  test_zran.py
