[build-system]
requires      = [
  "setuptools >= 40.8.0",
  "setuptools-scm",
  "cython"
  ]

build-backend = "setuptools.build_meta"

[project]
name            = "indexed_gzip"
dynamic         = ["version"]
description     = "Fast random access of gzip files in Python"
readme          = {file = "README.md", content-type="text/markdown"}
license         = "Zlib"
requires-python = ">=3.7"
maintainers     = [{name = "Paul McCarthy", email = "pauldmccarthy@gmail.com"}]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Compression",
]

[tool.setuptools_scm]

[project.urls]
"Repository" = "https://github.com/pauldmccarthy/indexed_gzip"

[project.optional-dependencies]
test = [
  "pytest",
  "numpy",
  "nibabel",
  "coverage",
  "pytest-cov",
  "cython-coverage"
]

[tool.setuptools.packages.find]
include = ["indexed_gzip*"]

[tool.pytest.ini_options]
testpaths = ["indexed_gzip/tests"]
addopts = "-v --cov=indexed_gzip"
markers = [
    "zran_test:         Test the zran.c library",
    "indexed_gzip_test: Test the indexed_gzip library",
    "nibabel_test:      Test interaction between indexed_gzip and nibabel/numpy",
    "slow_test:         Test which takes a long time"]

[tool.coverage.run]
include = ["indexed_gzip/*"]
omit    = ["indexed_gzip/tests/*"]
